app/themes/mortalkombatclassic/style.css
.img-responsive {
  width: 100%;
  height: auto;
}

.ng-scope {
  position: relative;
}

html {
  height: 100%;
}

body {
  min-height: 100%;
}

#backdrop {
  height: 100%;
}

/************************************************************
      Mortal Kombat Classic welcome page styles
************************************************************/


.intro-background {
  background: url(/app/themes/mortalkombatclassic/images/title.png) center no-repeat, url(/app/themes/mortalkombatclassic/images/title-repeater.png) repeat-x;
}

.welcome-background {
  background: url(/app/themes/mortalkombatclassic/images/welcome.png) center no-repeat, url(/app/themes/mortalkombatclassic/images/welcome-repeater.png) repeat-x;
}

.vsbackground {
  background: url(/app/themes/mortalkombatclassic/images/vs.png) center no-repeat, url(/app/themes/mortalkombatclassic/images/vs-repeater.png) repeat-x;
}

.intro-background, .welcome-background, .vsbackground {
  background-size: auto 100%;
  background-position: 50% 100%;
}

.playerbox {
  position: relative;
  top: 66%;
  text-align: center;
  margin: 0 auto;
}

.welcomeplayer, .locationtext  {
  font-size: 5vmin;
  /*color: #efe918;*/
  color: #F15F22;
  font-family: "HelveticaNeue-bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  text-transform: uppercase;
  text-shadow: 4px 4px 2px #000;
  letter-spacing: 2px;
  padding: 10px;
}

.playername {
  color: yellow;
  font-size: 20px;
  position: absolute;
}

.healthbar {
  height: 28px;
  background-color: green;
}

.containerbox {
  position: absolute;
  bottom: 5%;
  width: 100%
}

.healthbar-container {
  width: 80%;
  display: inline-block;
}

.healthbarcontainer {
  width: 100%;
  height: 30px;
  background-color: red;
  border-width: 1px;
  border-color: yellow;
  border-style: solid;
}

.gametimer, .gamemessage {
  font-size: 5vw;
  color: red;
  font-family: fantasy;
  margin: auto;
  display: inline;
  width: 40%;
}

.gamemessage {
  text-shadow: 3px 3px #5C5C5C;
  height: 100px;
}

.game-background {
  background-repeat: repeat-x;
  background-size: auto 100%;
  background-position: center bottom;
}


/******************************
      vs. screen styling
******************************/


.top-block {
  display: block;
  width: 100%;
  height: 15vh;
  margin-bottom: 3%;
}

.top-container {
  display: block;
  width: 100%;
  height: 20vh;
  margin-bottom: 3%;
}

.vscontainer {
  width: 100%;
}

.avatarcontainer {
  width: 100%;
  text-align: center;
}

.avatarcontainer img {
  width: 2vw;
}

.kombatzone {
  text-align: center;
  position: absolute;
  bottom: 2%;
  width: 100%;
}

.avatar {
  display: inline-block;
  width: 35%;
  margin: 0 4%;
}

.img-right {
  float: right;
}

.img-left {
  float: left;
}

.center {
  width: 300px;
  height: 300px;
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -150px;
  margin-top: -150px;
}

/*.locationtext {
  width: 100%;
  color: #F15F22;
  font-family: "HelveticaNeue-bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-size: 3vw;
}*/

.ng-scope img {
  width: 100%;
  height: auto;
}


/******************************
    battle screen styling
******************************/


#gamemessage, .gametimer {
  text-align: center;
}

#gamemessage, .gamemessage {
  position: initial;
}

.top-info {
  padding-top: 3%;
  text-align: center;
}

.healthbar-container {
  display: inline-block;
}

.avatar-health {
  display: inline;
}

.avatar.thumb {
  border: 2px solid black;
  border-radius: 100px;
  overflow: hidden;
  width: 10%;
}

.avatar-health img {

}

.gifcontainer {
  position: relative;
  padding: 0 10%;
  margin-top: 27%;
}

.fightercontainer {
  width: 90%;
  margin: 0 auto;
  padding-top: 10%;
  display: table;
}

.playercontainer {
  display: table;
}

.player1container {
  margin-left: 5%;
  width: 45%;
}

.player2container {
  margin-right: 5%;
  width: 45%;
}

.player {
  height: 299px;
  width: 260px;
  background-repeat: no-repeat;
  background-size: contain;
}

.player2 {
  float: right;
}

.player1.scoredon, .player1.score {
  float: right;
  margin-right: -100px;
}

.player2.scoredon, .player2.score {
  float: left;
  margin-left: -100px;
}

.player1container .taunt {
  right: 0;
}

.taunt-box {
  height: 10%;
}

.taunt {
  display: inline-block !important; /* overrides angular's ng-hide with display:none !important*/
  position: absolute;
  top: -83px;
  min-width: 100px;
  padding:15px;
  color:#000;
  background:#f3961c; /* default background for browsers without gradient support */
  /* css3 */
  background:-webkit-gradient(linear, 0 0, 0 100%, from(#f9d835), to(#f3961c));
  background:-moz-linear-gradient(#f9d835, #f3961c);
  background:-o-linear-gradient(#f9d835, #f3961c);
  background:linear-gradient(#f9d835, #f3961c);
  -webkit-border-radius:10px;
  -moz-border-radius:10px;
  border-radius:10px;
}

.taunt.ng-hide {
  visibility: hidden; /* works with .taunt to change angular's display none */
}

.taunt:after {
  content:"";
  position:absolute;
  bottom:-15px; /* value = - border-top-width - border-bottom-width */
  left:50px; /* controls horizontal position */
  border-width:15px 15px 0; /* vary these values to change the angle of the vertex */
  border-style:solid;
  border-color:#f3961c transparent;
  /* reduce the damage in FF3.0 */
  display:block;
  width:0;
}

.flip-horizontal {
  -moz-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  transform: scaleX(-1);
  -ms-filter: fliph; /*IE*/
  filter: fliph; /*IE*/
}

.wrapper {
  height: 100%;
  display: table;
  width: 100%;
  text-align: center;
}

.header {
  display: table-row;
  height: 1px;
  background: @yellow;
}

.main {
  height: 100%;
  display: table;
  width: 100%;
}

.box {
  display: table-cell;
}

.sidebar {
  width: 100px;
  background: @orange;
}

.footer {
  display: table-row;
  height:1px;
  background: @green;
  color: @beige;
}


@media (max-height: 984px) {
  .player1container, .player2container {
    zoom: 1.2;
    bottom: 6%;
  }
  .avatar {
    display: inline-block;
    width: 27%;
    margin: 0 3%;
  }
  .top-block {
    margin-bottom: 5%;
  }
}

/*@media (min-height: 901px) {
  .player1container, .player2container {
    zoom: 1.2;
    bottom: 6%;
  }
  .avatar {
    display: inline-block;
    width: 27%;
    margin: 0 3%;
  }
}*/

@media (min-height: 1080px) {
  .player1container, .player2container {
    zoom: .9;
    bottom: 6%;
  }
  .vsbackground .avatar {
    display: inline-block;
    width: 28%;
    margin: 0 3%;
  }
  .top-block {
    margin-bottom: 5.5%;
  }
}

@media (max-height: 600px) {
  .player1container, .player2container {
    zoom: .9;
    bottom: 6%;
  }
  .vsbackground .avatar {
    display: inline-block;
    width: 26%;
    margin: 0 2%;
  }
}

@media (max-height: 400px) {
  .player1container, .player2container {
    zoom: .5;
    bottom: 6%;
  }
  .intro-background {
    background-image: url(/app/themes/mortalkombatclassic/images/title-stretched.png);
  }
  .playerbox {
    top: 66%;
  }
  .playerbox .welcomeplayer {
    font-size: 4vh;
  }
  .vsbackground .avatar {
    display: inline-block;
    width: 23%;
    margin: 0 2%;
  }
}

@media (max-height: 250px) {
  .player1container, .player2container {
    zoom: .2;
    bottom: 6%;
  }
  .playerbox {
    top: 67%;
  }
  .playerbox .welcomeplayer {
    font-size: 4vh;
    padding: 5px;
  }
  .vsbackground .avatar {
    display: inline-block;
    width: 30%;
    margin: 0 2%;
  }
}

